# wc2026-predictor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  package.json  pnpm-lock.yaml  railway.toml  session-log.md  wc2026-architecture.md
apps/api/: Dockerfile  alembic.ini  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
apps/api/scripts/: staging_smoke.py
apps/api/src/: auth.py  bootstrap_admin.py  config.py  database.py  deps.py  logging_config.py  main.py  middleware.py  rate_limit.py  reveal_gate.py  scheduler.py  seed.py  seed_squads.py
apps/api/src/data/: generate_squads.py  squads_2026.json
apps/api/tests/: conftest.py  test_admin_backup.py  test_admin_dashboard.py  test_admin_knockout_advance.py  test_admin_matches.py  test_admin_results.py  test_admin_sync.py  test_admin_tiebreak.py  test_auth.py  test_auth_extras.py  test_auth_m4.py  test_avatar.py  test_bootstrap_admin.py  test_compare.py  test_correlation_id.py  test_cross_league_summary.py  test_football_data_client.py  test_global_leaderboard.py  test_groups.py  test_health.py  test_invites.py  test_join.py  test_join_code.py  test_knockout_advancement.py  test_knockout_predictions.py  test_knockout_progression.py  test_knockout_sync.py  test_leaderboard.py  test_leagues.py  test_matches.py  test_me_home.py  test_models.py  test_multi_league_migration.py  test_new_endpoints.py  test_notification_triggers.py  test_notifications.py  test_per_league_migration.py  test_players.py  test_prediction_reminders.py  test_predictions.py  (+19 more)
(+381 files in other folders)
