[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "wc2026-api"
version = "0.0.1"
description = "World Cup 2026 Prediction League — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "sqlalchemy[asyncio]>=2.0.31",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "bcrypt>=4.1.3",
    "pyjwt>=2.13.0",
    "starlette>=1.0.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "httpx>=0.27.0",
    "apscheduler>=3.10.4",
    "tzlocal>=5.2",
    "pywebpush>=2.0.0",
    "structlog>=24.4.0",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.1",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.4",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# DB fixtures (db_engine) need a session-scoped loop so the asyncpg pool
# stays bound to the same loop tests run in.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
